--- a/about.html
+++ b/about.html
@@ -1,34 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | My SEO Website</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About Us – Optimizer</title>
+<style>
+* {
+    margin: 0; padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background: #ffffff;
+    color: #222;
+}
+
+/* HEADER */
+header {
+    width: 100%;
+    background: #ffffff;
+    border-bottom: 1px solid #efefef;
+    padding: 18px 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
+header .logo {
+    font-size: 26px;
+    font-weight: 700;
+    color: #ff4d4d;
+}
+
+header nav a {
+    margin: 0 18px;
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    transition: 0.3s;
+}
+
+header nav a:hover {
+    color: #ff4d4d;
+}
+
+header .cta-btn {
+    background: #ff4d4d;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 15px;
+}
+
+/* HERO / ABOUT OPTIMIZER */
+.about-hero, .company-overview {
+    /* background-color:  #ffeb3b; Yellow background like Zoho */
+    padding: 70px 40px;
+    text-align: center;
+    color: #222;
+}
+
+.about-hero h1, .company-overview h2 {
+    color: #ff4d4d; /* Red headings for contrast */
+    margin-bottom: 16px;
+}
+
+.about-hero p, .company-overview p {
+    font-size: 16px;
+    max-width: 800px;
+    margin: auto;
+    line-height: 1.6;
+}
+
+/* TEAM SECTION */
+.team {
+    padding: 70px 40px;
+    background: #f9f9f9;
+    text-align: center;
+}
+
+.team h2 {
+    font-size: 32px;
+    margin-bottom: 15px;
+}
+
+.team .sub-text {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 50px;
+}
+
+.team-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.team-member {
+    width: 260px;
+    background: #fff;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    text-align: center;
+}
+
+.team-member img {
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 18px;
+}
+
+.team-member h3 {
+    font-size: 20px;
+    margin-bottom: 12px;
+    color: #ff4d4d;
+}
+
+.team-member p {
+    font-size: 15px;
+    color: #555;
+    line-height: 1.5;
+}
+
+/* MISSION & VISION */
+.mission-vision {
+    padding: 70px 40px;
+    text-align: center;
+}
+
+.mission-vision h2 {
+    font-size: 32px;
+    margin-bottom: 40px;
+}
+
+.mission-vision .box-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.mission-vision .box {
+    background: #fff;
+    width: 300px;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    text-align: center;
+}
+
+.mission-vision .box h3 {
+    font-size: 20px;
+    margin-bottom: 12px;
+    color: #ff4d4d;
+}
+
+.mission-vision .box p {
+    font-size: 16px;
+    color: #555;
+    line-height: 1.6;
+}
+
+/* FOOTER */
+footer {
+    text-align: center;
+    padding: 22px;
+    background: #ffffff;
+    border-top: 1px solid #efefef;
+    margin-top: 60px;
+}
+</style>
 </head>
 <body>
-  <header>
+
+<!-- HEADER -->
+<header>
+    <div class="logo">Optimizer</div>
     <nav>
-      <div class="logo">MySEO</div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+            <a href="index.html">Home</a>
+            <a href="services.html">Services</a>
+            <a href="blog.html">Blogs</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
     </nav>
-  </header>
+    <a href="index.html#enquiry" class="cta-btn">Get Quote</a>
+</header>
 
-  <main>
-    <section class="about">
-      <h1>About Us</h1>
-      <p>We are dedicated to creating SEO-friendly websites that rank higher on search engines.</p>
-      <p>Our mission is to make your website faster, cleaner, and more visible to your audience.</p>
-    </section>
-  </main>
+<!-- ABOUT OPTIMIZER -->
+<section class="about-hero">
+    <h1>About Optimizer</h1>
+    <p>We are a digital marketing agency focused on AI-driven strategies, innovative campaigns, and measurable growth. Our team of experts delivers scalable solutions for businesses worldwide.</p>
+</section>
 
-  <footer>
-    <p>&copy; 2025 My SEO Website</p>
-  </footer>
+<!-- COMPANY OVERVIEW -->
+<section class="company-overview">
+    <h2>Company Overview</h2>
+    <p>Optimizer is a future-first digital marketing agency specializing in SEO, content marketing, social media, web development, branding, and analytics. We combine human creativity with AI-powered intelligence to drive measurable growth for our clients globally.</p>
+</section>
+
+<!-- TEAM SECTION -->
+<section class="team">
+    <h2>Meet Our Team</h2>
+    <p class="sub-text">The visionaries driving our AI-powered marketing solutions.</p>
+    <div class="team-container">
+        <!-- CEO -->
+        <div class="team-member">
+            <img src="images/ceo.jpg" alt="CEO Photo">
+            <h3>Divyabharathi</h3>
+            <p>Founder & CEO — Leading our team with vision, creativity, and a passion for digital transformation. Expert in SEO, content strategy, and AI-driven marketing.</p>
+        </div>
+        <!-- Example team member -->
+        <!-- <div class="team-member">
+            <img src="images/team1.jpg" alt="Team Member">
+            <h3>John Doe</h3>
+            <p>Marketing Head — Driving performance campaigns and ensuring measurable growth for all clients.</p>
+        </div> -->
+    </div>
+</section>
+
+<!-- MISSION & VISION -->
+<section class="mission-vision">
+    <h2>Our Mission & Vision</h2>
+    <div class="box-container">
+        <div class="box">
+            <h3>Mission</h3>
+            <p>To empower businesses with AI-driven digital marketing strategies that scale growth and boost brand impact globally.</p>
+        </div>
+        <div class="box">
+            <h3>Vision</h3>
+            <p>To become a leading global marketing agency known for creativity, innovation, and measurable business results.</p>
+        </div>
+    </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+    © 2025 Optimizer – Digital Marketing Agency. All Rights Reserved.
+</footer>
+
 </body>
 </html>
