--- a/contact.html
+++ b/contact.html
@@ -3,42 +3,225 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | My SEO Website</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Contact – Optimizer</title>
+
+  <style>
+    * {
+      margin: 0; padding: 0;
+      font-family: 'Poppins', sans-serif;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: #ffffff;
+    }
+
+    /* HEADER */
+    header {
+      width: 100%;
+      background: #ffffff;
+      border-bottom: 1px solid #efefef;
+      padding: 18px 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    .logo {
+      font-size: 26px;
+      font-weight: 700;
+      color: #ff4d4d;
+    }
+
+    nav a {
+      margin: 0 18px;
+      text-decoration: none;
+      color: #333;
+      font-size: 16px;
+      transition: 0.3s;
+    }
+
+    nav a:hover,
+    nav .active {
+      color: #ff4d4d;
+    }
+
+    .cta-btn {
+      background: #ff4d4d;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-size: 15px;
+    }
+
+    /* HERO */
+    .contact-hero {
+      text-align: center;
+      padding: 90px 40px;
+    }
+
+    .contact-hero h1 {
+      font-size: 42px;
+      margin-bottom: 16px;
+      color: #222;
+    }
+
+    .contact-hero p {
+      font-size: 18px;
+      color: #555;
+    }
+
+    /* YELLOW HIGHLIGHT BANNER */
+    .contact-highlight {
+      background: #ffeb3b;
+      padding: 45px 30px;
+      text-align: center;
+      margin: 50px auto;
+      max-width: 950px;
+      border-radius: 10px;
+    }
+
+    .contact-highlight h2 {
+      font-size: 30px;
+      margin-bottom: 12px;
+      color: #222;
+    }
+
+    .contact-highlight p {
+      font-size: 18px;
+      color: #333;
+    }
+
+    /* CONTACT FORM & INFO */
+    .contact-container {
+      max-width: 1100px;
+      margin: 60px auto;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 50px;
+      padding: 0 30px;
+    }
+
+    .contact-info {
+      flex: 1;
+      min-width: 280px;
+    }
+
+    .contact-info h3 {
+      font-size: 26px;
+      margin-bottom: 18px;
+      color: #ff4d4d;
+    }
+
+    .contact-info p {
+      font-size: 18px;
+      margin-bottom: 12px;
+      color: #333;
+    }
+
+    .contact-form {
+      flex: 1;
+      min-width: 340px;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    .contact-form h3 {
+      font-size: 23px;
+      margin-bottom: 18px;
+      color: #222;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      width: 100%;
+      margin-bottom: 18px;
+      padding: 14px;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+    }
+
+    .contact-form button {
+      width: 100%;
+      padding: 15px;
+      background: #ff4d4d;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .contact-form button:hover {
+      background: #d73838;
+    }
+
+    footer {
+      text-align: center;
+      padding: 22px;
+      background: #ffffff;
+      border-top: 1px solid #efefef;
+      margin-top: 60px;
+      color: #444;
+    }
+  </style>
 </head>
+
 <body>
-  <header>
-    <nav>
-      <div class="logo">MySEO</div>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <section class="contact">
-      <h1>Contact Us</h1>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+<header>
+  <div class="logo">Optimizer</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="blog.html">Blogs</a>
+    <a href="about.html">About</a>
+    <a href="contact.html" class="active">Contact</a>
+  </nav>
+  <a href="index.html#enquiry" class="cta-btn">Get Quote</a>
+</header>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+<section class="contact-hero">
+  <h1>We’re Here to Help</h1>
+  <p>Reach out for SEO, organic traffic growth, or collaboration opportunities.</p>
+</section>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+<section class="contact-highlight">
+  <h2>Let’s Work Together & Scale Your Visibility 🚀</h2>
+  <p>Whether you're a startup, business, or personal brand — our SEO optimization strategies help you get found, get traffic, and get results.</p>
+</section>
 
-        <button type="submit">Send</button>
-      </form>
-    </section>
-  </main>
+<section class="contact-container">
+  <div class="contact-info">
+    <h3>📌 Contact Information</h3>
+    <p><strong>CEO:</strong> Divyabharathi</p>
+    <p><strong>Email:</strong> support@optimizer.com</p>
+    <p><strong>Phone:</strong> +91 98765 43210</p>
+    <p><strong>Location:</strong> Bangalore, India</p>
+  </div>
 
-  <footer>
-    <p>&copy; 2025 My SEO Website</p>
-  </footer>
+  <form class="contact-form">
+    <h3>Send us a Message</h3>
+    <input type="text" placeholder="Full Name" required>
+    <input type="email" placeholder="Email Address" required>
+    <textarea rows="5" placeholder="Write your message" required></textarea>
+    <button type="submit">Submit</button>
+  </form>
+</section>
+
+
+<footer>
+  © 2025 Optimizer – Digital Marketing Agency. All Rights Reserved.
+</footer>
+
 </body>
 </html>
