--- a/index.html
+++ b/index.html
@@ -1,57 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEO Tips & Tricks</title>
-  <meta name="description" content="Learn the best SEO tips and strategies to boost your website traffic.">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Optimizer – Digital Marketing Agency</title>
+    <meta name="description" content="Optimizer is a Digital Marketing Agency 
+    specializing in SEO, Content Marketing, Web Design, and Social Media strategies.
+     Grow your business organically.">
+     
+     <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Optimizer",
+  "url": "https://www.yourwebsite.com"
+}
+</script>
 
-  <!-- Open Graph for Social Sharing -->
-  <meta property="og:title" content="SEO Tips & Tricks">
-  <meta property="og:description" content="Learn the best SEO tips and strategies to boost your website traffic.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.yourdomain.com">
-  <meta property="og:image" content="images/og-image.jpg">
+    
+    <style>
+        * {
+            margin: 0; padding: 0;
+            font-family: 'Poppins', sans-serif;
+            box-sizing: border-box;
+        }
 
-  <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        body {
+            background: #ffffff;
+        }
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
+        /* HEADER */
+        header {
+            width: 100%;
+            background: #ffffff;
+            border-bottom: 1px solid #efefef;
+            padding: 18px 60px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+        }
+
+        .logo {
+            font-size: 26px;
+            font-weight: 700;
+            color: #ff4d4d; /* Zoho like red color */
+        }
+
+        nav a {
+            margin: 0 18px;
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            transition: 0.3s;
+        }
+
+        nav a:hover {
+            color: #ff4d4d;
+        }
+
+        .cta-btn {
+            background: #ff4d4d;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 15px;
+        }
+
+        /* HERO SECTION */
+        .hero {
+            text-align: center;
+            padding: 90px 40px;
+        }
+
+        .hero h1 {
+            font-size: 42px;
+            margin-bottom: 16px;
+            color: #222;
+        }
+
+        .hero p {
+            font-size: 18px;
+            color: #666;
+            margin-bottom: 26px;
+        }
+
+        .hero .cta-main {
+            background: #ff4d4d;
+            padding: 14px 32px;
+            color: white;
+            font-size: 18px;
+            border-radius: 8px;
+            text-decoration: none;
+        }
+
+        /* FEATURES — centered */
+        .features {
+            padding: 70px 40px;
+            text-align: center;
+        }
+
+        .features h2 {
+            font-size: 32px;
+            margin-bottom: 45px;
+            color: #222;
+        }
+
+        .feature-container {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            flex-wrap: wrap;
+        }
+
+        .feature-box {
+            background: #ffffff;
+            width: 280px;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+        }
+
+        .feature-box p {
+  line-height: 1.6; /* space between lines */
+  margin-top: 10px; /* space above paragraph */
+  margin-bottom: 15px; /* space below paragraph */
+  font-family: 'Poppins', sans-serif; /* example font */
+  font-size: 16px; /* size of paragraph text */
+}
+
+
+        .feature-box h3 {
+            margin-bottom: 12px;
+            font-size: 20px;
+            color: #ff4d4d;
+        }
+
+        /* ENQUIRY FORM */
+        .enquiry {
+            padding: 80px 40px;
+            background: #fafafa;
+        }
+
+        .enquiry h2 {
+            text-align: center;
+            margin-bottom: 26px;
+            font-size: 32px;
+        }
+
+        form {
+            max-width: 500px;
+            margin: auto;
+        }
+
+        input, textarea {
+            width: 100%;
+            margin-bottom: 18px;
+            padding: 14px;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            font-size: 16px;
+        }
+
+        button {
+            width: 100%;
+            padding: 15px;
+            background: #ff4d4d;
+            color: white;
+            font-size: 18px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+        }
+
+        footer {
+            text-align: center;
+            padding: 22px;
+            background: #ffffff;
+            border-top: 1px solid #efefef;
+            margin-top: 60px;
+        }
+    </style>
 </head>
+
 <body>
-  <header>
-    <h1>SEO Tips & Tricks</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="blog.html">Blog</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
+    <!-- HEADER -->
+    <header>
+        <div class="logo">Optimizer</div>
+        <nav>
+            <a href="#">Home</a>
+            <a href="services.html">Services</a>
+            <a href="blog.html">Blogs</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+        <a href="#enquiry" class="cta-btn">Get Quote</a>
+    </header>
+
+    <!-- HERO -->
     <section class="hero">
-      <h2>Boost Your Website Traffic</h2>
-      <p>Learn proven SEO strategies, tips, and tricks to rank higher on Google.</p>
+        <h1>Grow Faster with Digital Marketing That Delivers Results</h1>
+        <p>SEO | Social Media | Content Marketing | Website Optimization – We help you get quality leads organically.</p>
+        <a href="#enquiry" class="cta-main">Get Free Consultation</a>
     </section>
 
-    <section class="blog-previews">
-      <article>
-        <h2><a href="blog-post-1.html">SEO Basics for Beginners</a></h2>
-        <p>Learn how to start SEO for your website and get more organic traffic.</p>
-      </article>
-      <article>
-        <h2><a href="blog-post-2.html">Advanced On-Page SEO Techniques</a></h2>
-        <p>Discover strategies to optimize your pages and improve Google ranking.</p>
-      </article>
-    </section>
-  </main>
+    <!-- FEATURES -->
+    <section class="features">
+        <h2>Our Core Services</h2>
+        <div class="feature-container">
+           <div class="feature-box">
+      <h3>Digital Marketing</h3>
+      <p>We harness AI-powered insights, automation, and precision targeting to boost brand visibility, drive conversions, and accelerate business growth across digital landscapes.</p>
+    </div>
 
-  <footer>
-    <p>© 2025 SEO Tips & Tricks. All Rights Reserved.</p>
-  </footer>
+    <div class="feature-box">
+      <h3>Social Media Marketing</h3>
+      <p>Whether it’s LinkedIn, Instagram, or Moj, our AI-backed content strategy predicts what audiences love — helping us craft viral campaigns with maximum engagement.</p>
+    </div>
+
+    <div class="feature-box">
+      <h3>Performance Marketing</h3>
+      <p>Buyer-persona prediction models and AI-optimized placements help us achieve superior ROAS by reaching the right user at the perfect moment.</p>
+    </div>
+
+    <div class="feature-box">
+      <h3>Search Engine Optimization</h3>
+      <p>We merge traditional SEO with AI search behavior analysis to ensure customers find you even before they start searching.</p>
+    </div>
+
+    <div class="feature-box">
+      <h3>Branding & Packaging</h3>
+      <p>AI-driven competitive analysis and personalization models help us craft brands that stand out visually, emotionally, and strategically.</p>
+    </div>
+
+    <div class="feature-box">
+      <h3>UI/UX Design</h3>
+      <p>With heat-mapping and predictive design intelligence, we build interfaces that convert curiosity into action instantly.</p>
+    </div>
+
+    <div class="feature-box">
+      <h3>Web & Mobile Development</h3>
+      <p>We build high-performance digital platforms powered by scalable architecture and AI-driven personalization.</p>
+    </div>
+
+    <div class="feature-box">
+      <h3>Analytics</h3>
+      <p>Our AI analytics engine transforms raw data into real-time dashboards, forecasting, and automated insights for smarter decision-making.</p>
+    </div>
+  -
+        </div>
+    </section>
+
+    <!-- ENQUIRY FORM -->
+    <section class="enquiry" id="enquiry">
+        <h2>Get Free Digital Marketing Audit</h2>
+        <form>
+            <input type="text" placeholder="Your Full Name" required>
+            <input type="email" placeholder="Business Email" required>
+            <input type="tel" placeholder="Phone Number" required>
+            <textarea rows="4" placeholder="Tell us about your business" required></textarea>
+            <button type="submit">Submit Enquiry</button>
+        </form>
+    </section>
+
+    <footer>
+        © 2025 Optimizer – Digital Marketing Agency. All Rights Reserved.
+    </footer>
+
 </body>
 </html>
