--- a/public/about.html
+++ b/public/about.html
@@ -191,6 +191,8 @@ footer {
             <a href="blog.html">Blogs</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
+            <a href="/tools/tools.html">Tools</a>
+
     </nav>
     <a href="index.html#enquiry" class="cta-btn">Get Quote</a>
 </header>
@@ -214,7 +216,7 @@ footer {
     <div class="team-container">
         <!-- CEO -->
         <div class="team-member">
-            <img src="images/ceo.jpg" alt="CEO Photo">
+            <img src="/images/ceo.jpg" alt="CEO Photo">
             <h3>Divyabharathi</h3>
             <p>Founder & CEO — Leading our team with vision, creativity, and a passion for digital transformation. Expert in SEO, content strategy, and AI-driven marketing.</p>
         </div>
