--- a/public/blog.html
+++ b/public/blog.html
@@ -81,6 +81,8 @@
         <a href="blog.html" class="active">Blogs</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <a href="/tools/tools.html">Tools</a>
+
     </nav>
     <a href="contact.html" class="cta-btn">Get Quote</a>
 </header>
