--- a/public/contact.html
+++ b/public/contact.html
@@ -186,6 +186,8 @@
     <a href="blog.html">Blogs</a>
     <a href="about.html">About</a>
     <a href="contact.html" class="active">Contact</a>
+    <a href="/tools/tools.html">Tools</a>
+
   </nav>
   <a href="index.html#enquiry" class="cta-btn">Get Quote</a>
 </header>
