--- a/public/index.html
+++ b/public/index.html
@@ -1,277 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Optimizer - Digital Marketing Agency</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SEO Project Quotation</title>
 
-    <meta name="description" content="Optimizer is a Digital Marketing Agency 
-    specializing in SEO, Content Marketing, Web Design, and Social Media strategies.
-     Grow your business organically.">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f8f9fc;
+      color: #222;
+    }
 
-     <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "Optimizer",
-  "url": "https://optimizer-eta.vercel.app/"
-}
-</script>
+    .container {
+      width: 90%;
+      max-width: 1000px;
+      margin: 30px auto;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
+      overflow: hidden;
+    }
 
-    
-    <style>
-        * {
-            margin: 0; padding: 0;
-            font-family: 'Poppins', sans-serif;
-            box-sizing: border-box;
-        }
+    /* HEADER */
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 25px;
+      border-bottom: 2px solid #eee;
+    }
 
-        body {
-            background: #ffffff;
-        }
+    .logo {
+      font-size: 32px;
+      font-weight: bold;
+      color: #ff3b3b;
+    }
 
-        /* HEADER */
-        header {
-            width: 100%;
-            background: #ffffff;
-            border-bottom: 1px solid #efefef;
-            padding: 18px 60px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            top: 0;
-        }
+    .title {
+      font-size: 22px;
+      font-weight: bold;
+      letter-spacing: 2px;
+      color: #222;
+    }
 
-       .logo {
-            font-size: 26px;
-            font-weight: 700;
-            color: #ff4d4d; /* Zoho like red color */
-        }
+    /* SECTION TITLE */
+    .section-title {
+      background: linear-gradient(to right, #ff3b3b, #ff6b6b);
+      color: white;
+      padding: 12px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 25px;
+    }
 
-       nav a {
-            margin: 0 18px;
-            text-decoration: none;
-            color: #333;
-            font-size: 16px;
-            transition: 0.3s;
-        }
+    /* TABLE STYLE */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 0;
+    }
 
-        nav a:hover {
-            color: #ff4d4d;
-        }
+    td, th {
+      padding: 14px;
+      border: 1px solid #eee;
+      text-align: left;
+    }
 
-        .cta-btn {
-            background: #ff4d4d;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 6px;
-            text-decoration: none;
-            font-size: 15px;
-        }
+    th {
+      background: #f3f3f3;
+      font-weight: bold;
+    }
 
-        /* HERO SECTION */
-        .hero {
-            text-align: center;
-            padding: 90px 40px;
-        }
+    /* WEEK BOX */
+    .week-table td:first-child {
+      font-weight: bold;
+      text-align: center;
+      width: 80px;
+      color: #ff3b3b;
+      font-size: 18px;
+    }
 
-        .hero h1 {
-            font-size: 42px;
-            margin-bottom: 16px;
-            color: #222;
-        }
+    /* RESULTS BOX */
+    .results-box {
+      background: #ff3b3b;
+      color: white;
+      padding: 20px;
+      border-radius: 12px;
+      margin: 20px;
+    }
 
-        .hero p {
-            font-size: 18px;
-            color: #666;
-            margin-bottom: 26px;
-        }
+    .results-box h3 {
+      margin-top: 0;
+    }
 
-        .hero .cta-main {
-            background: #ff4d4d;
-            padding: 14px 32px;
-            color: white;
-            font-size: 18px;
-            border-radius: 8px;
-            text-decoration: none;
-        }
+    /* PRICING */
+    .total-row {
+      font-weight: bold;
+      font-size: 18px;
+      color: #ff3b3b;
+    }
 
-        /* FEATURES — centered */
-        .features {
-            padding: 70px 40px;
-            text-align: center;
-        }
+    /* CONTACT */
+    .contact {
+      padding: 20px;
+      font-size: 15px;
+    }
 
-        .features h2 {
-            font-size: 32px;
-            margin-bottom: 45px;
-            color: #222;
-        }
+    .contact p {
+      margin: 8px 0;
+    }
 
-        .feature-container {
-            display: flex;
-            justify-content: center;
-            gap: 40px;
-            flex-wrap: wrap;
-        }
+    /* FOOTER */
+    .footer {
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+      background: #f3f3f3;
+    }
 
-        .feature-box {
-            background: #ffffff;
-            width: 280px;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-        }
-
-        .feature-box p {
-  line-height: 1.6; /* space between lines */
-  margin-top: 10px; /* space above paragraph */
-  margin-bottom: 15px; /* space below paragraph */
-  font-family: 'Poppins', sans-serif; /* example font */
-  font-size: 16px; /* size of paragraph text */
-}
-
-
-        .feature-box h3 {
-            margin-bottom: 12px;
-            font-size: 20px;
-            color: #ff4d4d;
-        }
-
-        /* ENQUIRY FORM */
-        .enquiry {
-            padding: 80px 40px;
-            background: #fafafa;
-        }
-
-        .enquiry h2 {
-            text-align: center;
-            margin-bottom: 26px;
-            font-size: 32px;
-        }
-
-        form {
-            max-width: 500px;
-            margin: auto;
-        }
-
-        input, textarea {
-            width: 100%;
-            margin-bottom: 18px;
-            padding: 14px;
-            border-radius: 8px;
-            border: 1px solid #ddd;
-            font-size: 16px;
-        }
-
-        button {
-            width: 100%;
-            padding: 15px;
-            background: #ff4d4d;
-            color: white;
-            font-size: 18px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-
-        footer {
-            text-align: center;
-            padding: 22px;
-            background: #ffffff;
-            border-top: 1px solid #efefef;
-            margin-top: 60px;
-        }
-    </style>
+  </style>
 </head>
-
 <body>
 
+  <div class="container">
+
     <!-- HEADER -->
-    <header>
-        <a href="index.html" class="logo">Optimizer</a>
-        <nav>
-            <a href="#">Home</a>
-            <a href="services.html">Services</a>
-            <a href="blog.html">Blogs</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="/tools/tools.html">Tools</a>
-
-        </nav>
-        <a href="#enquiry" class="cta-btn">Get Quote</a>
-    </header>
-
-    <!-- HERO -->
-    <section class="hero">
-        <h1>Grow Faster with Digital Marketing That Delivers Results</h1>
-        <p>SEO | Social Media | Content Marketing | Website Optimization – We help you get quality leads organically.</p>
-        <a href="#enquiry" class="cta-main">Get Free Consultation</a>
-    </section>
-
-    <!-- FEATURES -->
-    <section class="features">
-        <h2>Our Core Services</h2>
-        <div class="feature-container">
-           <div class="feature-box">
-      <h3>Digital Marketing</h3>
-      <p>We harness AI-powered insights, automation, and precision targeting to boost brand visibility, drive conversions, and accelerate business growth across digital landscapes.</p>
+    <div class="header">
+      <div class="logo">Optimizer</div>
+      <div class="title">SEO PROJECT QUOTATION</div>
     </div>
 
-    <div class="feature-box">
-      <h3>Social Media Marketing</h3>
-      <p>Whether it’s LinkedIn, Instagram, or Moj, our AI-backed content strategy predicts what audiences love — helping us craft viral campaigns with maximum engagement.</p>
+    <!-- CLIENT DETAILS -->
+    <div class="section-title">Client Details</div>
+
+    <table>
+      <tr>
+        <th>Client Name</th>
+        <td>Search Bloom Placements</td>
+      </tr>
+      <tr>
+        <th>Website</th>
+        <td>searchbloomplacements.com</td>
+      </tr>
+      <tr>
+        <th>Industry</th>
+        <td>Teacher Recruitment & School Staffing</td>
+      </tr>
+      <tr>
+        <th>Objective</th>
+        <td>Improve Search Bloom Placements’ online visibility, optimize the website for recruitment-related keywords, and build a strong SEO foundation to start generating school hiring inquiries</td>
+      </tr>
+    </table>
+
+    <!-- SEO SCOPE -->
+    <div class="section-title">SEO Scope of Work (1 Month Project)</div>
+
+    <table class="week-table">
+      <tr>
+        <th>Week</th>
+        <th>Tasks</th>
+        <th>Deliverables</th>
+      </tr>
+
+      <tr>
+        <td>1</td>
+        <td>Technical SEO Audit + On-Page Optimization</td>
+        <td>
+          • Website Crawl & SEO Health Check <br>
+          • Indexing Review <br>
+          • Sitemap & Robots Validation <br>
+          • Broken Link Fix Suggestions <br>
+          • Page Speed & Mobile Audit
+        </td>
+      </tr>
+
+      <tr>
+        <td>2</td>
+        <td>Blog Setup + Content Strategy</td>
+        <td>
+          • Blog Page Setup <br>
+          • Keyword Planning for Topics <br>
+          • SEO-Friendly Blog Structure
+        </td>
+      </tr>
+
+      <tr>
+        <td>3</td>
+        <td>High-Frequency Blog Publishing</td>
+        <td>
+          • 2 SEO Blog Posts per Day <br>
+          • School Hiring + Teacher Recruitment Keywords <br>
+          • Internal Linking Setup
+        </td>
+      </tr>
+
+      <tr>
+        <td>4</td>
+        <td>Competitor Analysis + Off-Page SEO</td>
+        <td>
+          • Competitor Keyword Gap Analysis <br>
+          • Backlink Review <br>
+          • Directory Submissions + 5–10 Backlinks
+        </td>
+      </tr>
+    </table>
+
+    <!-- EXPECTED RESULTS -->
+   <div class="results-box">
+  <h3>Expected Results</h3>
+  <ul>
+    <li>Improved website SEO health and technical performance</li>
+    <li>Better visibility for teacher recruitment and school hiring keywords</li>
+    <li>Strong foundation for long-term rankings and lead generation</li>
+  </ul>
+</div>
+
+
+    <!-- PRICING -->
+    <div class="section-title">Project Pricing (Freelancer)</div>
+
+    <table>
+      <tr>
+        <th>SEO Activity</th>
+        <th>Cost (INR)</th>
+      </tr>
+
+      <tr>
+        <td>Technical SEO Audit + On-Page SEO</td>
+        <td>₹3,000</td>
+      </tr>
+
+      <tr>
+        <td>Blog Setup + Content Strategy</td>
+        <td>₹2,500</td>
+      </tr>
+
+      <tr>
+        <td>Blog Publishing (Reduced Plan)</td>
+        <td>₹3,200</td>
+      </tr>
+
+      <tr>
+        <td>Competitor Analysis + Off-Page SEO</td>
+        <td>₹2,000</td>
+      </tr>
+
+      <tr>
+        <td>Reporting + Keyword Tracking</td>
+        <td>₹1,600</td>
+      </tr>
+
+      <tr class="total-row">
+        <td>Subtotal (1 Month)</td>
+        <td>₹12,300</td>
+      </tr>
+
+      <tr>
+        <td>GST @18%</td>
+        <td>₹2,700</td>
+      </tr>
+
+      <tr class="total-row">
+        <td>Total Payable</td>
+       <td>₹15,000</td> <!-- updated -->
+
+      </tr>
+    </table>
+
+    <!-- CONTACT -->
+    <div class="contact">
+      <h3>Contact Information</h3>
+      <p><b>Name:</b> R. Sivasurya</p>
+      <p><b>Email:</b> sivasuryaoptimizer@gmail.com</p>
+      <p><b>Phone:</b> 9361882842</p>
     </div>
 
-    <div class="feature-box">
-      <h3>Performance Marketing</h3>
-      <p>Buyer-persona prediction models and AI-optimized placements help us achieve superior ROAS by reaching the right user at the perfect moment.</p>
+    <!-- FOOTER -->
+    <div class="footer">
+      © 2026 Optimizer SEO Services | Professional Quotation Document
     </div>
 
-    <div class="feature-box">
-      <h3>Search Engine Optimization</h3>
-      <p>We merge traditional SEO with AI search behavior analysis to ensure customers find you even before they start searching.</p>
-    </div>
-
-    <div class="feature-box">
-      <h3>Branding & Packaging</h3>
-      <p>AI-driven competitive analysis and personalization models help us craft brands that stand out visually, emotionally, and strategically.</p>
-    </div>
-
-    <div class="feature-box">
-      <h3>UI/UX Design</h3>
-      <p>With heat-mapping and predictive design intelligence, we build interfaces that convert curiosity into action instantly.</p>
-    </div>
-
-    <div class="feature-box">
-      <h3>Web & Mobile Development</h3>
-      <p>We build high-performance digital platforms powered by scalable architecture and AI-driven personalization.</p>
-    </div>
-
-    <div class="feature-box">
-      <h3>Analytics</h3>
-      <p>Our AI analytics engine transforms raw data into real-time dashboards, forecasting, and automated insights for smarter decision-making.</p>
-    </div>
-  -
-        </div>
-    </section>
-
-    <!-- ENQUIRY FORM -->
-    <section class="enquiry" id="enquiry">
-        <h2>Get Free Digital Marketing Audit</h2>
-        <form>
-            <input type="text" placeholder="Your Full Name" required>
-            <input type="email" placeholder="Business Email" required>
-            <input type="tel" placeholder="Phone Number" required>
-            <textarea rows="4" placeholder="Tell us about your business" required></textarea>
-            <button type="submit">Submit Enquiry</button>
-        </form>
-    </section>
-
-    <footer>
-        © 2025 Optimizer – Digital Marketing Agency. All Rights Reserved.
-    </footer>
+  </div>
 
 </body>
 </html>
